--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="experiments.android.com.tictactoe.ui.TTTGameActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/restart_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Shree Laxmidevi prasanna"/>
+        android:text="Restart"/>
 
     <TableLayout
         android:id="@+id/game_board_layout"
