--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,22 @@
         android:id="@+id/restart_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:text="Restart"/>
 
-    <TableLayout
+    <experiments.android.com.tictactoe.ui.Board
         android:id="@+id/game_board_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:orientation="vertical"/>
+        android:orientation="vertical" />
+
+    <!--<TableLayout
+        android:id="@+id/game_board_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical"/>-->
 
     <TextView
         android:id="@+id/message"
